# BrainGPT

./: .gitignore  .pdm-python  CHANGELOG.md  Makefile  README.md  output.txt  output_original.txt  pyproject.toml  setup.py
docs/: BrainGPT.srctrldb  BrainGPT.srctrlprj
logs/: file_import_log.csv
notes/: decompose.txt  question_opentopics.txt  sample_decoded.txt
references/10_reference_others/multi-doc-chatbot-master/docs/: JuanGarciaCV.txt
samples/35_input_own_scripts/brainGPT/: app_braingpt.ipynb  config.py  forms.py  generate_answer.py  routes.py
samples/35_input_own_scripts/brainGPT/static/: style.css
samples/45_template_scripts/: deployment_script.py
scripts/: BrainGPT_query.py  app.py  braingpt_app.py  braingpt_query.py  forms.py  ingestion.py  ingestion_app.py  routes.py
scripts/35_input_own_scripts/brainGPT/: brain_app.py  routes.py
scripts/35_input_own_scripts/brainGPT/templates/: index.html
scripts/40_trials/: reading_chromadb.ipynb
scripts/50_snippets/: my_sql_sample.py
scripts/static/css/: style_base.css  style_grid_base.css  style_grid_question.css
scripts/static/css/old/: grid.css  style copy 2.css  style copy 3.css  style copy.css  style_grid_layout_main_20231008.css  style_sample.css
scripts/templates/: base.html  grid_base.html  index.html  question.html
scripts/templates/old/: base.html  base_20231008.html  create.html  custom_content.html  index copy01.html  index.html  index_20231008.html  index_new.html  nested_grid.html
scripts/trials/: chromaDB_playground.ipynb  decompose2_prompt.py  parsing_qa.ipynb  playground.ipynb
src/: simpleGPT.ipynb
src/05_data-processing/braingpt_ingestion/: ingestion.py
src/15_prediction/: query.py
src/80_utilities/: utilities_braingpt
src/brain_gpt_tools/: config_braingpt.py
src/braingpt_src/: generate_answer.py  generate_answer_backup.py
trials/: chat_data.ipynb  chromadb_trial.py  decompose_answer.ipynb  dict_generator.py  dict_generator2.ipynb  parsing_qa.ipynb
